testsuite/tests/lexing/reject_bad_encoding.compilers.reference
Line 4, characters 8-10:
4 | let x = ÿa.x;;
            ^^
Error: Invalid encoding of identifier ÿa.

