testsuite/tests/lexing/reject_bad_encoding.ml
(* TEST
toplevel;
*)
let x = ÿa.x;;
